--- a/app.json
+++ b/app.json
@@ -7,9 +7,9 @@
       "telegram",
       "python"
     ],
-    "sᴜᴘᴘᴏʀᴛ ᴄʜᴀɴɴᴇʟ": "https://github.com/breakdowns",
-    "sᴜᴘᴘᴏʀᴛ ᴄʜᴀᴛ": "https://github.com/breakdowns",
-    "ᴅᴇᴠ_ᴜʀʟ": "https://t.me/SlamDevs",
+    "sᴜᴘᴘᴏʀᴛ ᴄʜᴀɴɴᴇʟ": "https://t.me/storm_tech",
+    "sᴜᴘᴘᴏʀᴛ ᴄʜᴀᴛ": "https://t.me/storm_core",
+    "ᴅᴇᴠ_ᴜʀʟ": "https://t.me/interstellarXd",
     "stack": "container",
     "env": {
 "7542527679:AAHAJjgpymV0pqSTdGsTyapqmfZCk0YUNQA": {
