--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "ʙɪʟʟᴀ ᴋᴀɴɢ-sᴛɪᴄᴋᴇʀ",
-    "description": ᴀ ꜱɪᴍᴘʟᴇ ᴛᴇʟᴇɢʀᴀᴍ ʙᴏᴛ ᴡʜɪᴄʜ ᴄʀᴇᴀᴛᴇꜱ ꜱᴛɪᴄᴋᴇʀ ᴘᴀᴄᴋꜱ ꜰʀᴏᴍ ᴏᴛʜᴇʀ ꜱᴛɪᴄᴋᴇʀꜱ, ɪᴍᴀɢᴇꜱ, ᴅᴏᴄᴜᴍᴇɴᴛꜱ ᴀɴᴅ ᴜʀʟꜱ.",
+    "description": "ᴀ ꜱɪᴍᴘʟᴇ ᴛᴇʟᴇɢʀᴀᴍ ʙᴏᴛ ᴡʜɪᴄʜ ᴄʀᴇᴀᴛᴇꜱ ꜱᴛɪᴄᴋᴇʀ ᴘᴀᴄᴋꜱ ꜰʀᴏᴍ ᴏᴛʜᴇʀ ꜱᴛɪᴄᴋᴇʀꜱ, ɪᴍᴀɢᴇꜱ, ᴅᴏᴄᴜᴍᴇɴᴛꜱ ᴀɴᴅ ᴜʀʟꜱ.",
     "logo": "https://graph.org/file/b42d68bac4aa95b168a2a-fd169adbf1b7cb75c6.jpg",
     "keywords": [
       "bot",
