--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
+# Telegram Bot Token (you get this from BotFather on Telegram)
 TOKEN=your_telegram_bot_token
+
+# Your Telegram API ID (you get this from https://my.telegram.org/auth)
 API_ID=your_telegram_api_id
+
+# Your Telegram API Hash (you get this from https://my.telegram.org/auth)
 API_HASH=your_telegram_api_hash
